# resistics-readers

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
docs/source/: conf.py  getting-started.rst  index.rst  modules.rst  resistics_readers.lemi.b423.rst  resistics_readers.lemi.b423e.rst  resistics_readers.lemi.rst  resistics_readers.metronix.ats.rst  resistics_readers.metronix.calibration.rst  resistics_readers.metronix.rst  resistics_readers.miniseed.mseed.rst  resistics_readers.miniseed.rst  resistics_readers.multifile.rst  resistics_readers.phoenix.headers.rst  resistics_readers.phoenix.mtu5.rst  resistics_readers.phoenix.rst  resistics_readers.rst  resistics_readers.spam.calibration.rst  resistics_readers.spam.rst  resistics_readers.spam.spam.rst
docs/source/_static/: default.css
resistics_readers/: __init__.py  multifile.py
resistics_readers/lemi/: __init__.py  b423.py  b423e.py
resistics_readers/metronix/: __init__.py  ats.py  calibration.py
resistics_readers/miniseed/: __init__.py  mseed.py
resistics_readers/phoenix/: __init__.py  headers.py  mtu5.py  phoenix.py
resistics_readers/spam/: __init__.py  calibration.py  spam.py
tests/data/: calibration_testing.py  timeseries_testing.py
