[tool.poetry]
name = "resistics-readers"
version = "0.1.0"
description = "Package with various instrument data format readers for resistics"
authors = ["Neeraj Shah <resistics@outlook.com>"]
maintainers = ["Neeraj Shah <resistics@outlook.com>"]
readme="README.md"
repository="https://github.com/resistics/resistics-readers"
keywords=[
    "geophysics",
    "magnetotellurics",
    "electromagnetic",
    "resistivity",
    "statistics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
numpy = "^1.20.3"
pandas = "^1.2.4"
loguru = "^0.5.3"
resistics = "1.0.0a1"
defusedxml = "^0.7.1"
obspy = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pre-commit = "^2.12.1"
matplotlib = "^3.4.2"
Sphinx = "^4.0.0"
furo = "^2021.4.11-beta.34"
sphinx-copybutton = "^0.3.1"
autodoc-pydantic = "^1.3.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pytest-html = "^3.1.1"
mypy = "^0.812"
darglint = "^1.8.0"
flake8 = "^3.9.2"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-bandit = "^2.1.2"
flake8-pytest-style = "^1.4.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-expression-complexity = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
